[Gtk] Assertions in gtk_widget_draw when acquiring pixel output https://bugs.webkit.org/show_bug.cgi?id=88060

Reviewed by Martin Robinson.

Spin the main loop before acquiring the pixel content. This ensures things
like late size allocations are finished before calling gtk_widget_draw,
avoiding assertions and subsequent empty pixel results.

* DumpRenderTree/gtk/PixelDumpSupportGtk.cpp:
(createBitmapContextFromWebView):


Canonical link: https://commits.webkit.org/106354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119715 268f45cc-cd09-0410-ab3c-d52691b4dbfc